--- a/.github/workflows/move-data.yml
+++ b/.github/workflows/move-data.yml
@@ -8,9 +8,11 @@ on:
 jobs:
   move_data:
     runs-on: ubuntu-latest
+    env:
+      node-version: 16.16.0
     steps:
       - name: Checkout main branch
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2.4.3
         with:
           ref: main
       - name: Copy data from dev to main
