--- a/.github/workflows/move-data.yml
+++ b/.github/workflows/move-data.yml
@@ -7,13 +7,13 @@ on:
 
 jobs:
   move_data:
-    runs-on: ubuntu-latest
-    env:
-      node-version: 16.16.0
+    runs-on: ubuntu-latest    
     steps:
       - name: Checkout main branch
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
         with:
+          node-version: '14'
           ref: main
       - name: Copy data from dev to main
         run: rsync -a sarathnicky/datamove sarathnicky/datamove
